--- a/styles/main.css
+++ b/styles/main.css
@@ -135,7 +135,7 @@ a{
   }
   
   /* Clear floats after the columns */
-  .services_wrapper {
+  .services wrapper {
     display: table;
     clear: both;
   }
@@ -156,7 +156,7 @@ a{
       
 }
 
-.testimonials p{
+h5{
     margin-top: 70px;
     font-size: 20px;
     color:grey;
@@ -183,7 +183,7 @@ a{
   }
   
   /* Clear floats after the columns */
-.testimonials_wrapper {
+.testimonials wrapper {
     display: table;
     clear: both;
   }
@@ -195,7 +195,7 @@ a{
     margin-left: 30%;
 }
 .footer_widget{
-height: 200px;
+height: 300px;
 background-color: rgb(36, 34, 34);
 border-left: 10%;
 }
@@ -211,9 +211,8 @@ margin: 0px;
 padding: 0px;
 }
 .box-2 #locations{
-    padding-top: 10px;
-    margin:10px;
-    /* text-align: center; */
+    padding-top: 70px;
+    margin: 10px;
     padding-left: 5%;
 }
 .box-2 #locations address{
@@ -233,7 +232,7 @@ padding: 0px;
   
 }
 .box-2 #ark{
-    padding-top: 10px;
+    padding-top: 0px;
     /* margin:10px; */
     margin-right: 20px;
     /* float: left; */
@@ -260,6 +259,7 @@ padding: 0px;
 }
 .box-2 img{
    margin-top:20px;
+   text-align: left;
 }
 .box-2 #sup_list #sup_item_3{
   padding-bottom:31px;
@@ -284,6 +284,30 @@ padding: 0px;
   padding-top: 40px;
   padding-bottom:20px;
 }
-
-
+.footerupper{
+    display: inline-flex;
+    background-color:grey;
+    opacity:0.7;
+    color:white;
+    width: 55%;
+    /* margin-left: 15px; */
+    height:60px;
+    padding-bottom: 0px;
+    font-weight: bold;
+    padding-left: 20px;    
+}
+.footerupper p{
+    text-align: center;
+}
+.footerupper input{
+    float: right;
+    border:7px solid turquoise;
+    background-color: turquoise;
+    color: white;
+    height: 40px;
+    margin-top: 6px;
+    margin-right: 10px;
+    margin-left: 10px;
+    font-weight: bold;
+}
 
