--- a/styles/main.css
+++ b/styles/main.css
@@ -21,7 +21,6 @@ body{
     background-image: url("/images/oie_23224456Eb3GO7K\ \(1\).jpg");
     width: 100%;
     height: 500px;
-    /* position: fixed; */
 }
 
 .nav_bar{
@@ -80,19 +79,20 @@ body{
     background-color:white;
     opacity: 0.7;
     margin-top: 430px;
-    padding-top: 10px;
+    padding-top: 7px;
     height: 60px;
     justify-items: right;
     width: 100%;
 } 
 
-.cta :hover{
-    background-color: white;
+.transparent_nav :hover{
+    background-color:blueviolet;
 }
+
 
 .cta #cta_link { 
     justify-items: right;
-    margin-left:40%;
+    margin-left:45%;
     width: 200px; 
     height: 5px;
     background-color:rgb(87, 204, 250);
@@ -101,7 +101,7 @@ body{
     position: relative;
 } 
 .cta #cta_text{
-    margin:10px;
+    margin:20px;
 }
 
 .cta #cta_header{
