--- a/styles/main.css
+++ b/styles/main.css
@@ -1,26 +1,35 @@
-
+/* Root selector */
 *{
     box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
 }
+/* root selectorend */
 html{
     height: 100%;
-    font-family: Verdana;
-    font-size: 16px;
-    box-sizing: border-box;
+    
+  
 }
 body{
-    margin: 0px;
+   
     width:100%;
     height: 100%;
 
 } 
+/* Navigation and header */
 .transparent_nav{
     color: black;
     display: flex;
     flex-direction: column;
-    background-image: url("/images/oie_23224456Eb3GO7K\ \(1\).jpg");
+    background-image:url("/img/background.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
     width: 100%;
     height: 500px;
+ 
 }
 
 .nav_bar{
@@ -30,10 +39,10 @@ body{
     padding-left: 20%;
     width: 100%;
     display: flex;
-    align-items: end;
+    align-items: flex-start;
     height: 60px;
-    background-color:white;
-    opacity:0.7 ;
+    background-color:rgba(255,255,255,0.78);
+    
 }
   
 /* Navbar links */
@@ -66,7 +75,7 @@ body{
     margin-top: 0px;
 }
 #nav_list li{
-    display: inline;
+    display: inline-block;
     inline-size: inherit;
 
 }
@@ -74,242 +83,213 @@ body{
     height: 20px;
 }
 .cta{
-    position: relative;
+    
     display: inline-block;
-    background-color:white;
-    opacity: 0.7;
+    background-color:rgba(255,255,255,0.78);
     margin-top: 430px;
-    padding-top: 7px;
+    padding-top: 20px;
     height: 60px;
     justify-items: right;
     width: 100%;
 } 
 
 .cta :hover{
-    background-color:blueviolet;
+   height:20px;
+   width:100%;
+    background-color: aqua;
+
 }
 
-
-#cta_link { 
+.cta #cta_link { 
     justify-items: right;
-    margin-left:45%;
+    margin-left:40%;
     width: 200px; 
     height: 5px;
-    background-color:rgb(87, 204, 250);
-    border:7px solid rgb(87, 204, 250);
+    background-color:rgb(13, 177, 241);
+    border:5px solid rgb(13, 177, 241);
     color: white;
-    position: relative;
+    text-decoration: none;
 } 
-#cta_text{
-    margin:20px;
-    color: grey;
-    font-weight: bold;
+.cta #cta_text{
+    margin-left: 150px;
+    margin-right: 30px;
 }
 
-#cta_header{
+.cta #cta_header{
     display: inline;
 } 
-a{  
-    text-decoration:none;
-    color:white;
-    
-}
+/* Navigation and header end */
 
+/* Services start*/
 .companyslogan p{
     margin-top: 70px;
     font-size: 20px;
     color:grey;
-    margin-left: 450px;
-    position: relative;
+
+ 
     justify-content: center;
-    margin-bottom: 70px;
-}
-.column_ul {
-    float: left;
-    width:inherit;
-    height: 200px; /* Should be removed. Only for demonstration */
-    list-style-type: none;
-    margin-left: 17%;
-  }
-  .left, .right , .middle {
-    width: 15%;
     text-align: center;
-  }
-  
-  /* Clear floats after the columns */
-  .services wrapper {
-    display: table;
-    clear: both;
-  }
+}
+.services_wrapper{
+    list-style: none;
+}
+.services_wrapper ul li{
+padding: 50px;
+}
+.services_wrapper ul li h3{
+    margin-bottom: 20px;
+}
+/* Services end */
 
-
+/* recent work start */
 .recent_work{
-    height: 200px;
+    height: 500px;
 }
 .column img{
     float: left;
     width: 20%;
-    height: 200px;
+    height: 500px;
+    
     
   }
-.column :hover{
-    -webkit-transform: scale(1.5); /* Safari 3-8 */
-    transform: scale(1.5); 
-      
-}
+  #w1:hover{
+      border: 2px solid #000;
+  }
+  #w2:hover{
+      border: 2px solid #000;
+  }
+  #w3:hover{
+      border: 2px solid #000;
+  }
+  #w4:hover{
+      border: 2px solid #000;
+  }
+  #w5:hover{
+      border: 2px solid #000;
+  }
+  /* recent work ends */
+  /* testimonials Start */
+.testimonials wrapper{
+    
+    background: #f8f8f8;
 
-h5{
-    margin-top: 70px;
-    font-size: 20px;
-    color:grey;
-    position: relative;
     text-align: center;
-    margin-bottom: 70px;
+    color:#777;
+    
 }
-
-
-.testi {
+.testimonials wrapper h2{
+    margin-top: 20px;
+    padding-top: 20px;
+}
+  
+  
+ .box {
     float: left;
-    width:inherit;
-    height: 300px; /* Should be removed. Only for demonstration */
-    list-style-type: none;
-    justify-content: space-around;
-    margin-left: 5%;
+    width: 33.3%;
+    padding: 60px;
+    text-align:center;
+  list-style-type: none;
+  color:#777;
+   
   }
-.testi img{
+ 
+  .round-img{
       border-radius: 50%;
+      margin-bottom: 20px;
   }
-.first, .second , .third {
+  .heading-3{
+      padding: 20px;
+  }
+
+  .bold-title{
+      font-size: large;
+
+  }
+  /* Testimonials end */
+  /* brand logos */
+  .sixbrandlogos{
+      padding-top:12px;
+      padding-left:12px ;
+      background-color: #f4f4f4;
+      display: inline-block;
+
+  }
+  .client-logo{
+      margin:1px 11px 20px 15.68px;
+  }
+  /* brand logos end */
+
+
+ /* footer starts */
+  .footer_widget{
+      height: 200px;
+  background-color: rgb(36, 34, 34);
+  
+  }
+  .box-2{
+    float: left;
     width: 25%;
-    text-align: center;
+    text-align:center;
+  list-style-type: none;
+  color:#fff;
+  text-decoration: none;
+  background-color: rgb(36, 34, 34);
+
   }
-  
-  /* Clear floats after the columns */
-.testimonials wrapper {
-    display: table;
-    clear: both;
+  .box-2 #locations{
+      padding-top: 10px;
+      margin: 20px;
   }
-.brand{
-    background-color: white;
-    opacity: 0.9;
-}
-.brandlogos{
-    margin-left: 30%;
-}
-.footer_widget{
-height: 300px;
-background-color: rgb(36, 34, 34);
-border-left: 10%;
-}
-.box-2{
-  float: left;
-  width: 25%;
-  text-align:center;
-list-style-type: none;
-color:#fff;
-text-decoration: none;
-background-color: rgb(36, 34, 34);
-margin: 0px;
-padding: 0px;
-}
-.box-2 #locations{
-    padding-top: 70px;
-    margin: 10px;
-    padding-left: 5%;
-}
-.box-2 #locations address{
-    text-align: left;
-}
-.box-2 #support{
+  .box-2 #support{
     padding-top: 10px;
-    margin: 10px;
-    /* margin-right: 0px;
-    padding-right: 0px; */
-    /* float: left; */
-}
-.box-2 #company{
-  padding-top: 10px;   
-  margin: 10px;
-  /* float: left; */
-  
-}
-.box-2 #ark{
-    padding-top: 0px;
-    /* margin:10px; */
-    margin-right: 20px;
-    /* float: left; */
-}
-.box-2 #comp_list li{
-    text-decoration: none;
-    list-style: none;
-}
-.box-2 #comp_list li a{
-    text-decoration: none;
-    color: white;
-    text-align: left;
-}
-.box-2 #sup_list li{
-    list-style: none;
-    text-align: left;
-}
-.box-2 #support{
-    text-align: left;
-}
-.box-2 #sup_list li a{
-    text-decoration: none;
-    color: white;
-}
-.box-2 img{
-   margin-top:20px;
-   text-align: left;
-}
+      margin: 20px;
+  }
+  .box-2 #company{
+    padding-top: 10px;   
+    margin: 20px;
+  }
+  .box-2 #ark{
+    padding-top: 10px;
+      margin:20px;
+  }
+  .box-2 #comp_list li{
+      text-decoration: none;
+      list-style: none;
+  }
+  .box-2 #comp_list li a{
+      text-decoration: none;
+      color: white;
+  }
+  .box-2 #sup_list li{
+      list-style: none;
+     
+  }
+  .box-2 #sup_list li a{
+      text-decoration: none;
+      color: white;
+  }
+ .box-2 img{
+     margin-top:20px;
+ }
 .box-2 #sup_list #sup_item_3{
-  padding-bottom:31px;
+    padding-bottom:31px;
 }
 .box-2 #comp_list #comp_item_4{
-  padding-bottom: 14px;
+    padding-bottom: 14px;
 }
 .box-2 #ark-para{
-  padding-bottom: 31px;
-  padding-right: 10%;
-  text-align: justify;
+    padding-bottom: 31px;
 }
 .clear{
-  clear: both;
+    clear: both;
 }
 .rights{
-  text-align:center;
-  color: #fff;
-  background-color: rgb(36, 34, 34);
-  margin:0px;
-  padding-left: 10px;
-  padding-top: 40px;
-  padding-bottom:20px;
+    
+    text-align:center;
+    color: #fff;
+    background-color: rgb(36, 34, 34);
+    padding-left: 10px;
+    padding-top: 40px;
+    padding-bottom:20px;
 }
-.footerupper{
-    display: inline-flex;
-    background-color:grey;
-    opacity:0.7;
-    color:white;
-    width: 55%;
-    /* margin-left: 15px; */
-    height:60px;
-    padding-bottom: 0px;
-    font-weight: bold;
-    padding-left: 20px;    
-}
-.footerupper p{
-    text-align: center;
-}
-.footerupper input{
-    float: right;
-    border:7px solid turquoise;
-    background-color: turquoise;
-    color: white;
-    height: 40px;
-    margin-top: 6px;
-    margin-right: 10px;
-    margin-left: 10px;
-    font-weight: bold;
-}
-
+/* footer ends */
